--- a/frontendfiles-sarvang/login.html
+++ b/frontendfiles-sarvang/login.html
@@ -36,8 +36,8 @@
     <!-- Login Box -->
     <div class="container-fluid">
         <div class="row">
-            <div class="col-sm-2 col-md-4 col-lg-4"></div>
-            <div class="row col-sm-8 col-md-4 col-lg-4 border border-dark border-2 rounded rounded-3 transbox">
+            <div class="col-sm-12 col-md-4 col-lg-4"></div>
+            <!-- <div class="row col-sm-8 col-md-4 col-lg-4 border border-dark border-2 rounded rounded-3 transbox">
                 <div class="col-md-2 col-lg-2 col-sm-12"></div>
                 <form class="mb-3 col-md-8 col-lg-8 col-sm-12">
                     <div class="mb-3">
@@ -59,6 +59,31 @@
                     </div>
                 </form>
                 <div class="col-md-2 col-lg-2 col-sm-12"></div>
+            </div> -->
+            <div class="col-sm-12 col-md-4 col-lg-4 transbox">
+                <div class="login-form">
+                    <h3>Login Page</h3>
+                    <div class="form-group mt-3">
+                        <div class="input-group mb-3">
+                            <span class="input-group-text" id="basic-addon1">@</span>
+                            <input type="email" class="form-control" placeholder="Email" aria-label="Username" aria-describedby="basic-addon1">
+                        </div>
+                    </div>
+                    <div class="form-group mt-3">
+                        <div class="input-group mb-3">
+                            <span class="input-group-text" id="basic-addon1"><i class="fas fa-key"></i></span>
+                            <input type="password" class="form-control" placeholder="Password" aria-label="Username" aria-describedby="basic-addon1">
+                        </div>
+                    </div>
+                    <div class="form-group mt-5 row">
+                        <div class="col-lg-6 col-md-6 col-sm-12">
+                            <a href="#"><button class="btnSubmit">Login</button></a>
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-12 mt-2">
+                            <a href="#" class="btnForgetPwd">Forgot Password?</a>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="col-sm-2 col-md-4 col-lg-4"></div>
         </div>
