Updated login page

--- a/frontendfiles-sarvang/login.html
+++ b/frontendfiles-sarvang/login.html
@@ -26,9 +26,9 @@
     <!-- Define the whole page in a container -->
 
     <!-- Login Page Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-expand-md navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-expand-md navbar-light" style="background-color: #ebebe9;">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">COVID Resource Monitor</a>
+            <a class="navbar-brand" href="#"><h4>COVID Resource Monitor</h4></a>
             </div>
         </div>
     </nav>
@@ -37,32 +37,10 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-12 col-md-4 col-lg-4"></div>
-            <!-- <div class="row col-sm-8 col-md-4 col-lg-4 border border-dark border-2 rounded rounded-3 transbox">
-                <div class="col-md-2 col-lg-2 col-sm-12"></div>
-                <form class="mb-3 col-md-8 col-lg-8 col-sm-12">
-                    <div class="mb-3">
-                        <div class="mb-3"></div>
-                        <div class="d-flex justify-content-center mb-3">
-                            <h2 class="text-white"><i class="bi bi-person-badge"></i> <u>Volunteer Login</u></h2>
-                        </div>
-                        <div class="input-group mb-3">
-                            <span class="input-group-text" id="basic-addon1">Username</span>
-                            <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
-                        </div>
-                        <div class="input-group mb-3">
-                            <span class="input-group-text" id="basic-addon1">Password</span>
-                            <input type="password" class="form-control" placeholder="Password" aria-label="Username" aria-describedby="basic-addon1">
-                        </div>
-                    </div>
-                    <div class="d-flex justify-content-center">
-                        <button type="submit" class="btn btn-primary">Submit</button>
-                    </div>
-                </form>
-                <div class="col-md-2 col-lg-2 col-sm-12"></div>
-            </div> -->
             <div class="col-sm-12 col-md-4 col-lg-4 transbox">
-                <div class="login-form">
-                    <h3>Login Page</h3>
+                <form class="login-form">
+                    <h3 class="mb-2"> <u>Login Page</u> </h3>
+                    <a href="#" class="btnForgetPwd d-flex flex-row-reverse mb-2"> Not registered? Continue as guest</a>
                     <div class="form-group mt-3">
                         <div class="input-group mb-3">
                             <span class="input-group-text" id="basic-addon1">@</span>
@@ -83,7 +61,7 @@
                             <a href="#" class="btnForgetPwd">Forgot Password?</a>
                         </div>
                     </div>
-                </div>
+                </form>
             </div>
             <div class="col-sm-2 col-md-4 col-lg-4"></div>
         </div>
