--- a/frontendfiles-sarvang/login.html
+++ b/frontendfiles-sarvang/login.html
@@ -68,6 +68,15 @@
 
     </div>
     
+    <!-- Footer -->
+    <section class="container-fluid fixed-bottom" id="footer">
+        <div class="row footer">
+            <div class="col-lg-12 text-center">
+                &copy;2021 Covid Resource Monitor
+            </div>
+        </div>
+    </section>
+
 </body>
 
 </html>
