--- a/frontendfiles-sarvang/login.html
+++ b/frontendfiles-sarvang/login.html
@@ -72,7 +72,7 @@
     <section class="container-fluid fixed-bottom" id="footer">
         <div class="row footer">
             <div class="col-lg-12 text-center">
-                &copy;2021 Covid Resource Monitor
+                &copy;<script>document.write(new Date().getFullYear())</script> Covid Resource Monitor
             </div>
         </div>
     </section>
