--- a/frontendfiles-sarvang/dashboard.html
+++ b/frontendfiles-sarvang/dashboard.html
@@ -20,9 +20,12 @@
         integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
     <!-- DataTable CSS -->
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.24/css/jquery.dataTables.css">
+    <!-- jQuery CDN -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <!-- DataTable JS  -->
     <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.js"></script>
-
+    <!-- JS File -->
+    <script src="js/dashboard.js"></script>
     <!-- Page Title -->
     <title>Resources Dashboard | COVID Resource Monitor</title>
 </head>
@@ -30,29 +33,150 @@
 <body>
     <!-- Define the whole page in a container -->
 
-    <!-- Login Page Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-expand-md navbar-light" style="background-color: #ebebe9;">
+    <!-- Dashboard Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-expand-md navbar-light container-fluid" style="background-color: #ebebe9;">
         <div class="container-fluid">
             <a class="navbar-brand" href="#"><h4>COVID Resource Monitor</h4></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                      <a class="nav-link active text-white" aria-current="page" href="#">
+                          <h5><i class="bi bi-card-checklist"></i> Dashboard</h5>
+                        </a>
+                    </li>
+                </ul>
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <i class="bi bi-person-circle"></i> Guest
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                          <li><a class="dropdown-item" href="#"><i class="fas fa-sign-in-alt"></i> Login</a></li>
+                        </ul>
+                    </li>
+                </ul>
             </div>
         </div>
     </nav>
 
     <!-- Content Box -->
-    <div class="container-fluid row">
-        <h2><i class="bi bi-card-checklist"></i> <u>Resources Dashboard</u></h2>
-        <div class="col-md-1 col-lg-1"></div>
-        <div class="col-md-10 col-lg-10 col-sm-12">
-
+    <div class="container-fluid mt-5">
+        <div class="row">
+            <div class="col-md-2 col-lg-2">
+                <!-- Division for sidebar -->
+            </div>
+            <div class="col-md-8 col-lg-8 col-sm-12">
+                <h2><i class="bi bi-card-checklist"></i> <u>Resources Dashboard</u></h2>
+                <div id="searchbar">
+                    <form action="" class="row  mt-5">
+                        <div class="dropdown col-md-2 col-lg-2 col-sm-12">
+                            <select class="form-select" aria-label="set-state">
+                                <option selected>Select State</option>
+                                <option value="Delhi">Delhi</option>
+                                <option value="Maharashtra">Maharashtra</option>
+                                <option value="Tamil Nadu">Tamil Nadu</option>
+                            </select>
+                        </div>
+                        <div class="dropdown col-md-2 col-lg-2 col-sm-12">
+                            <select class="form-select" aria-label="set-region">
+                                <option selected>Select Region</option>
+                                <option value="Delhi-NCR">Delhi-NCR</option>
+                                <option value="Mumbai">Mumbai</option>
+                                <option value="Chennai">Chennai</option>
+                            </select>
+                        </div>
+                        <div class="dropdown col-md-2 col-lg-2 col-sm-12">
+                            <select class="form-select" aria-label="select-category">
+                                <option selected>Select Category</option>
+                                <option value="Beds">Beds</option>
+                                <option value="Medicine">Medicine</option>
+                                <option value="Oxygen">Oxygen</option>
+                            </select>
+                        </div>
+                        <div class="col-md-5 col-lg-5"></div>
+                        <div class="col-md-1 col-lg-1 col-sm-12 align-right">
+                            <button class="btn btn-outline-success">Search</button>
+                        </div>
+                    </form>
+                </div>
+                <hr>
+                <div id="dashboard" class="mt-4">
+                    <table id="dashboard-table" class="display border rounded" style="width:100%">
+                        <thead>
+                            <tr>
+                                <th>Name/Org.</th>
+                                <th>Location/Pin</th>
+                                <th>Regular Beds</th>
+                                <th>Beds with Oxygen</th>
+                                <th>ICU Beds</th>
+                                <th>Comments</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>This Hospital</td>
+                                <td>Mumbai <b>(Maharashtra)</b></td>
+                                <td>5</td>
+                                <td>2</td>
+                                <td>1</td>
+                                <td>Can arrange for more Ocy beds in a week</td>
+                            </tr>
+                            <tr>
+                                <td>That Hospital</td>
+                                <td>Delhi-NCR <b>(Delhi)</b></td>
+                                <td>2</td>
+                                <td>0</td>
+                                <td>3</td>
+                                <td>Running low on Oxygen</td>
+                            </tr>
+                            <tr>
+                                <td>This Hospital</td>
+                                <td>Mumbai <b>(Maharashtra)</b></td>
+                                <td>5</td>
+                                <td>2</td>
+                                <td>1</td>
+                                <td>Can arrange for more Ocy beds in a week</td>
+                            </tr>
+                            <tr>
+                                <td>That Hospital</td>
+                                <td>Delhi-NCR <b>(Delhi)</b></td>
+                                <td>2</td>
+                                <td>0</td>
+                                <td>3</td>
+                                <td>Running low on Oxygen</td>
+                            </tr>
+                            <tr>
+                                <td>This Hospital</td>
+                                <td>Chennai <b>(Tamil Nadu)</b></td>
+                                <td>5</td>
+                                <td>2</td>
+                                <td>1</td>
+                                <td>Can arrange for more Ocy beds in a week</td>
+                            </tr>
+                            <tr>
+                                <td>That Hospital</td>
+                                <td>Chennai <b>(Tamil Nadu)</b></td>
+                                <td>2</td>
+                                <td>0</td>
+                                <td>3</td>
+                                <td>Running low on Oxygen</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <div class="col-md-2 col-lg-2"></div>
         </div>
-        <div class="col-md-1 col-lg-1"></div>
     </div>
     
     <!-- Footer -->
     <section class="container-fluid fixed-bottom" id="footer">
         <div class="row footer">
             <div class="col-lg-12 text-center">
-                &copy;2021 Covid Resource Monitor
+                &copy;<script>document.write(new Date().getFullYear())</script> Covid Resource Monitor
             </div>
         </div>
     </section>
