Dashboard nav update

--- a/frontendfiles-sarvang/dashboard.html
+++ b/frontendfiles-sarvang/dashboard.html
@@ -54,7 +54,7 @@
                             <i class="bi bi-person-circle"></i> Guest
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                          <li><a class="dropdown-item" href="#"><i class="fas fa-sign-in-alt"></i> Login</a></li>
+                          <li><a class="dropdown-item" href="#"><i class="fas fa-sign-in-alt"></i> Login as user</a></li>
                         </ul>
                     </li>
                 </ul>
