--- a/frontendfiles-sarvang/dashboard.html
+++ b/frontendfiles-sarvang/dashboard.html
@@ -48,13 +48,13 @@
                         </a>
                     </li>
                 </ul>
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item dropdown">
+                <ul class="navbar-nav container">
+                    <li class="nav-item dropdown ms-auto ">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             <i class="bi bi-person-circle"></i> Guest
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                          <li><a class="dropdown-item" href="#"><i class="fas fa-sign-in-alt"></i> Login as user</a></li>
+                          <li><a class="dropdown-item" href="#"><i class="fas fa-sign-in-alt"></i> Login</a></li>
                         </ul>
                     </li>
                 </ul>
