Divider color change

--- a/frontendfiles-sarvang/dashboard.html
+++ b/frontendfiles-sarvang/dashboard.html
@@ -102,7 +102,7 @@
                         </div>
                     </form>
                 </div>
-                <hr>
+                <hr class="content-divider">
                 <div id="dashboard" class="mt-4">
                     <table id="dashboard-table" class="display border rounded" style="width:100%">
                         <thead>
