--- a/frontendfiles-sarvang/dashboard.html
+++ b/frontendfiles-sarvang/dashboard.html
@@ -9,10 +9,6 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
-    <!-- JavaScript Bundle with Popper ; If fails, try to put in BODY -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8"
-        crossorigin="anonymous"></script>
     <!-- Bootstrap Icons CDN -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
     <!-- FontAwesome Icons CDN-->
@@ -20,12 +16,7 @@
         integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
     <!-- DataTable CSS -->
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.24/css/jquery.dataTables.css">
-    <!-- jQuery CDN -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <!-- DataTable JS  -->
-    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.js"></script>
-    <!-- JS File -->
-    <script src="js/dashboard.js"></script>
+    
     <!-- Page Title -->
     <title>Resources Dashboard | COVID Resource Monitor</title>
 </head>
@@ -34,27 +25,32 @@
     <!-- Define the whole page in a container -->
 
     <!-- Dashboard Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-expand-md navbar-light container-fluid" style="background-color: #ebebe9;">
+    <nav class="navbar navbar-expand-lg navbar-expand-md navbar-light container-fluid"
+        style="background-color: #ebebe9;">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><h4>COVID Resource Monitor</h4></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <a class="navbar-brand" href="#">
+                <h4>COVID Resource Monitor</h4>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                      <a class="nav-link active text-white" aria-current="page" href="#">
-                          <h5><i class="bi bi-card-checklist"></i> Dashboard</h5>
+                        <a class="nav-link active text-white" aria-current="page" href="#">
+                            <h5><i class="bi bi-card-checklist"></i> Dashboard</h5>
                         </a>
                     </li>
                 </ul>
                 <ul class="navbar-nav container">
                     <li class="nav-item dropdown ms-auto ">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
                             <i class="bi bi-person-circle"></i> Guest
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                          <li><a class="dropdown-item" href="#"><i class="fas fa-sign-in-alt"></i> Login</a></li>
+                            <li><a class="dropdown-item" href="#"><i class="fas fa-sign-in-alt"></i> Login</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -96,7 +92,15 @@
                                 <option value="Oxygen">Oxygen</option>
                             </select>
                         </div>
-                        <div class="col-md-5 col-lg-5"></div>
+                        <div class="dropdown col-md-2 col-lg-2 col-sm-12">
+                            <select class="form-select" aria-label="select-category">
+                                <option selected>Select Type</option>
+                                <option value="Private">Private</option>
+                                <option value="Public (Govt.)">Public (Govt.)</option>
+                                <option value="NGO/Community-run">NGO/Community-run</option>
+                            </select>
+                        </div>
+                        <div class="col-md-3 col-lg-3"></div>
                         <div class="col-md-1 col-lg-1 col-sm-12 align-right">
                             <button class="btn btn-outline-success">Search</button>
                         </div>
@@ -108,60 +112,73 @@
                         <thead>
                             <tr>
                                 <th>Name/Org.</th>
-                                <th>Location/Pin</th>
+                                <th>Location</th>
                                 <th>Regular Beds</th>
                                 <th>Beds with Oxygen</th>
                                 <th>ICU Beds</th>
+                                <th>Lead Type</th>
                                 <th>Comments</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
-                                <td>This Hospital</td>
+                                <td> 
+                                    <a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">This Hospital</a>
+                                </td>
                                 <td>Mumbai <b>(Maharashtra)</b></td>
                                 <td>5</td>
                                 <td>2</td>
                                 <td>1</td>
+                                <td>Public</td>
                                 <td>Can arrange for more Ocy beds in a week</td>
                             </tr>
                             <tr>
-                                <td>That Hospital</td>
+                                <td><a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">That Hospital</a></td>
                                 <td>Delhi-NCR <b>(Delhi)</b></td>
                                 <td>2</td>
                                 <td>0</td>
                                 <td>3</td>
+                                <td>Public</td>
                                 <td>Running low on Oxygen</td>
                             </tr>
                             <tr>
-                                <td>This Hospital</td>
+                                <td>
+                                    <a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">This Hospital</a>
+                                </td>
                                 <td>Mumbai <b>(Maharashtra)</b></td>
                                 <td>5</td>
                                 <td>2</td>
                                 <td>1</td>
+                                <td>NGO</td>
                                 <td>Can arrange for more Ocy beds in a week</td>
                             </tr>
                             <tr>
-                                <td>That Hospital</td>
+                                <td><a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">That Hospital</a></td>
                                 <td>Delhi-NCR <b>(Delhi)</b></td>
                                 <td>2</td>
                                 <td>0</td>
                                 <td>3</td>
+                                <td>Private</td>
                                 <td>Running low on Oxygen</td>
                             </tr>
                             <tr>
-                                <td>This Hospital</td>
+                                <td>
+                                    <a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">This Hospital</a>
+                                </td>
                                 <td>Chennai <b>(Tamil Nadu)</b></td>
                                 <td>5</td>
                                 <td>2</td>
                                 <td>1</td>
+                                <td>Private</td>
                                 <td>Can arrange for more Ocy beds in a week</td>
                             </tr>
                             <tr>
-                                <td>That Hospital</td>
+                                <td><a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">That Hospital</a></td>
                                 <td>Chennai <b>(Tamil Nadu)</b></td>
                                 <td>2</td>
                                 <td>0</td>
                                 <td>3</td>
+                                <td>Public</td>
                                 <td>Running low on Oxygen</td>
                             </tr>
                         </tbody>
@@ -171,15 +188,87 @@
             <div class="col-md-2 col-lg-2"></div>
         </div>
     </div>
-    
+
     <!-- Footer -->
     <section class="container-fluid fixed-bottom" id="footer">
         <div class="row footer">
             <div class="col-lg-12 text-center">
-                &copy;<script>document.write(new Date().getFullYear())</script> Covid Resource Monitor
+                &copy;
+                <script>document.write(new Date().getFullYear())</script> Covid Resource Monitor
             </div>
         </div>
     </section>
+
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Lead Details</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="row">
+                        <div class="col-lg-6 col-sm-6 col-md-6">
+                            <b>Lead Name</b>
+                        </div>
+                        <div class="col-lg-6 col-sm-6 col-md-6">
+                            Insert lead name here
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-6 col-sm-6 col-md-6">
+                            <b>Contact Number</b>
+                        </div>
+                        <div class="col-lg-6 col-sm-6 col-md-6">
+                            Insert contact no. here
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-6 col-sm-6 col-md-6">
+                            <b>Email</b>
+                        </div>
+                        <div class="col-lg-6 col-sm-6 col-md-6">
+                            Insert email here
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-6 col-sm-6 col-md-6">
+                            <b>Address</b>
+                        </div>
+                        <div class="col-lg-6 col-sm-6 col-md-6">
+                            Insert address here
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-6 col-sm-6 col-md-6">
+                            <b>Google Map link</b>
+                        </div>
+                        <div class="col-lg-6 col-sm-6 col-md-6">
+                            Insert GMaps URL here
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <!-- JavaScript Bundle with Popper ; If fails, try to put in BODY -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8"
+        crossorigin="anonymous"></script>
+    <!-- jQuery CDN -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <!-- DataTable JS  -->
+    <script type="text/javascript" charset="utf8"
+        src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.js"></script>
+    <!-- JS File -->
+    <script src="js/dashboard.js"></script>
 
 </body>
 
