--- a/frontendfiles-sarvang/non-admin-dashboard.html
+++ b/frontendfiles-sarvang/non-admin-dashboard.html
@@ -24,7 +24,7 @@
 <body>
     <!-- Define the whole page in a container -->
 
-    <!-- Dashboard Navbar -->
+    <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-expand-md navbar-light container-fluid"
         style="background-color: #ebebe9;">
         <div class="container-fluid">
