--- a/frontendfiles-sarvang/team-add-modify.html
+++ b/frontendfiles-sarvang/team-add-modify.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/non-admin-add-modify.css">
+    <link rel="stylesheet" href="css/team-add-modify.css">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
@@ -615,7 +615,7 @@
     <script type="text/javascript" charset="utf8"
         src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.js"></script>
     <!-- JS File -->
-    <script src="js/non-admin-add-modify.js"></script>
+    <script src="js/team-add-modify.js"></script>
 
 </body>
 
