--- a/frontendfiles-sarvang/Guest-dashboard.html
+++ b/frontendfiles-sarvang/Guest-dashboard.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/team-dashboard.css">
+    <link rel="stylesheet" href="css/guest-dashboard.css">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
@@ -44,7 +44,7 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" aria-current="page" href="#">
-                            <h5><i class="bi bi-node-plus"></i> Add/Modify Leads</h5>
+                            <h5><i class="bi bi-node-plus"></i> Contribute Leads</h5>
                         </a>
                     </li>
                 </ul>
@@ -52,10 +52,10 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
-                            <i class="bi bi-person-circle"></i> User's Name
+                            <i class="bi bi-person-circle"></i> Guest
                         </a>
                         <ul class="dropdown-menu container" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="#"><i class="fas fa-sign-out-alt"></i> Log Out</a></li>
+                            <li><a class="dropdown-item" href="#"><i class="fas fa-sign-out-alt"></i> Log in</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -276,7 +276,7 @@
     <script type="text/javascript" charset="utf8"
         src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.js"></script>
     <!-- JS File -->
-    <script src="js/team-dashboard.js"></script>
+    <script src="js/guest-dashboard.js"></script>
 
 </body>
 
