--- a/frontendfiles-sarvang/dashboard.html
+++ b/frontendfiles-sarvang/dashboard.html
@@ -16,7 +16,7 @@
         integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
     <!-- DataTable CSS -->
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.24/css/jquery.dataTables.css">
-    
+
     <!-- Page Title -->
     <title>Resources Dashboard | COVID Resource Monitor</title>
 </head>
@@ -57,7 +57,6 @@
             </div>
         </div>
     </nav>
-
     <!-- Content Box -->
     <div class="container-fluid mt-5">
         <div class="row">
@@ -122,7 +121,7 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td> 
+                                <td>
                                     <a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">This Hospital</a>
                                 </td>
                                 <td>Mumbai <b>(Maharashtra)</b></td>
@@ -133,7 +132,8 @@
                                 <td>Can arrange for more Ocy beds in a week</td>
                             </tr>
                             <tr>
-                                <td><a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">That Hospital</a></td>
+                                <td><a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">That Hospital</a>
+                                </td>
                                 <td>Delhi-NCR <b>(Delhi)</b></td>
                                 <td>2</td>
                                 <td>0</td>
@@ -153,7 +153,8 @@
                                 <td>Can arrange for more Ocy beds in a week</td>
                             </tr>
                             <tr>
-                                <td><a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">That Hospital</a></td>
+                                <td><a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">That Hospital</a>
+                                </td>
                                 <td>Delhi-NCR <b>(Delhi)</b></td>
                                 <td>2</td>
                                 <td>0</td>
@@ -173,7 +174,8 @@
                                 <td>Can arrange for more Ocy beds in a week</td>
                             </tr>
                             <tr>
-                                <td><a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">That Hospital</a></td>
+                                <td><a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">That Hospital</a>
+                                </td>
                                 <td>Chennai <b>(Tamil Nadu)</b></td>
                                 <td>2</td>
                                 <td>0</td>
