--- a/frontendfiles-sarvang/login.html
+++ b/frontendfiles-sarvang/login.html
@@ -28,8 +28,10 @@
     <!-- Login Page Navbar -->
     <nav class="navbar navbar-expand-lg navbar-expand-md navbar-light" style="background-color: #ebebe9;">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><h4>COVID Resource Monitor</h4></a>
-            </div>
+            <a class="navbar-brand" href="#">
+                <h4>COVID Resource Monitor</h4>
+            </a>
+        </div>
         </div>
     </nav>
 
@@ -44,13 +46,15 @@
                     <div class="form-group mt-3">
                         <div class="input-group mb-3">
                             <span class="input-group-text" id="basic-addon1">@</span>
-                            <input type="email" class="form-control" placeholder="Email" aria-label="Username" aria-describedby="basic-addon1">
+                            <input type="email" class="form-control" placeholder="Email" aria-label="Username"
+                                aria-describedby="basic-addon1">
                         </div>
                     </div>
                     <div class="form-group mt-3">
                         <div class="input-group mb-3">
                             <span class="input-group-text" id="basic-addon1"><i class="fas fa-key"></i></span>
-                            <input type="password" class="form-control" placeholder="Password" aria-label="Username" aria-describedby="basic-addon1">
+                            <input type="password" class="form-control" placeholder="Password" aria-label="Username"
+                                aria-describedby="basic-addon1">
                         </div>
                     </div>
                     <div class="form-group mt-5 row">
@@ -67,12 +71,13 @@
         </div>
 
     </div>
-    
+
     <!-- Footer -->
     <section class="container-fluid fixed-bottom" id="footer">
         <div class="row footer">
             <div class="col-lg-12 text-center">
-                &copy;<script>document.write(new Date().getFullYear())</script> Covid Resource Monitor
+                &copy;
+                <script>document.write(new Date().getFullYear())</script> Covid Resource Monitor
             </div>
         </div>
     </section>
