--- a/frontendfiles/Guest-contribute.html
+++ b/frontendfiles/Guest-contribute.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/guest-contribute.css">
+    
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
@@ -16,6 +16,12 @@
         integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
     <!-- DataTable CSS -->
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.24/css/jquery.dataTables.css">
+    <!-- Side bar css -->
+    <link rel="stylesheet" href="css/sidebar.css">
+    <!-- Navbar css -->
+    <link rel="stylesheet" href="css/navbar.css">
+    <!-- Custom CSS for page -->
+    <link rel="stylesheet" href="css/guest-contribute.css">
 
     <!-- Page Title -->
     <title>Resources Dashboard | COVID Resource Monitor</title>
@@ -25,8 +31,7 @@
     <!-- Define the whole page in a container -->
 
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-expand-md navbar-light container-fluid"
-        style="background-color: #ebebe9;">
+    <nav id="custom-content-navbar" class="navbar navbar-expand-lg navbar-expand-md navbar-dark container-fluid">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
                 <h4>COVID Resource Monitor</h4>
@@ -151,11 +156,11 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-12 col-md-12 row">
-                                    <b class="col-md-3 col-sm-12 col-lg-3">Type of Lead: </b>
+                                    <b class="col-md-2 col-sm-12 col-lg-2">Type of Lead: </b>
                                     <div class="col-md-3 col-sm-12 col-lg-3">
                                         <input type="radio" class="btn-check" name="options-outlined"
-                                            id="success-outlined" autocomplete="off" checked>
-                                        <label class="btn btn-outline-success" for="success-outlined">Public
+                                            id="secondary-outlined" autocomplete="off" checked>
+                                        <label class="btn btn-outline-secondary" for="secondary-outlined">Public
                                             (Government)</label>
                                     </div>
                                     <div class="col-md-3 col-sm-12 col-lg-3">
@@ -232,10 +237,12 @@
                                 </div>
                                 <hr>
 
-                                <div class="col-sm-12 col-md-12 col-lg-12">
+                                <div class="col-sm-12 col-md-4 col-lg-4"></div>
+                                <div class="col-sm-12 col-md-4 col-lg-4">
                                     <a href="#"><button type="submit" class="btn-submit"><i class="bi bi-node-plus"></i>
                                             Contribute Lead Data</button></a>
                                 </div>
+                                <div class="col-sm-12 col-md-4 col-lg-4"></div>
 
                             </form>
                         </div>
