Guest UI Navbar update

--- a/frontendfiles/Guest-contribute.html
+++ b/frontendfiles/Guest-contribute.html
@@ -57,7 +57,7 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
-                            <i class="bi bi-person-circle"></i> Guest
+                            <i class="bi bi-person-circle"></i> Guest User or Visitor
                         </a>
                         <ul class="dropdown-menu container" aria-labelledby="navbarDropdownMenuLink">
                             <li><a class="dropdown-item" href="#"><i class="fas fa-sign-out-alt"></i> Log In</a></li>
