Changes to Head

--- a/frontendfiles/Guest-contribute.html
+++ b/frontendfiles/Guest-contribute.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="css/guest-contribute.css">
 
     <!-- Page Title -->
-    <title>Resources Dashboard | COVID Resource Monitor</title>
+    <title>Contribute Leads | COVID Resource Monitor</title>
 </head>
 
 <body>
