--- a/frontendfiles/Guest-contribute.html
+++ b/frontendfiles/Guest-contribute.html
@@ -48,7 +48,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active text-white" aria-current="page" href="#">
+                        <a class="nav-link active" aria-current="page" href="#">
                             <h5><i class="bi bi-node-plus"></i> Contribute Leads</h5>
                         </a>
                     </li>
