--- a/frontendfiles/Guest-dashboard.html
+++ b/frontendfiles/Guest-dashboard.html
@@ -43,7 +43,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active text-white" aria-current="page" href="#">
+                        <a class="nav-link active" aria-current="page" href="#">
                             <h5><i class="bi bi-card-checklist"></i> Dashboard</h5>
                         </a>
                     </li>
@@ -57,10 +57,10 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
-                            <i class="bi bi-person-circle"></i> Guest
+                            <i class="bi bi-person-circle"></i> Guest User or Visitor
                         </a>
                         <ul class="dropdown-menu container" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="#"><i class="fas fa-sign-out-alt"></i> Log in</a></li>
+                            <li><a class="dropdown-item" href="#"><i class="fas fa-sign-out-alt"></i> Log In</a></li>
                         </ul>
                     </li>
                 </ul>
