UI and clutter modixes

--- a/frontendfiles/team-add-modify.html
+++ b/frontendfiles/team-add-modify.html
@@ -166,11 +166,11 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-12 col-md-12 row">
-                                    <b class="col-md-3 col-sm-12 col-lg-3">Type of Lead: </b>
+                                    <b class="col-md-2 col-sm-12 col-lg-2">Type of Lead: </b>
                                     <div class="col-md-3 col-sm-12 col-lg-3">
                                         <input type="radio" class="btn-check" name="options-outlined"
-                                            id="success-outlined" autocomplete="off" checked>
-                                        <label class="btn btn-outline-success" for="success-outlined">Public
+                                            id="secondary-outlined" autocomplete="off" checked>
+                                        <label class="btn btn-outline-secondary" for="secondary-outlined">Public
                                             (Government)</label>
                                     </div>
                                     <div class="col-md-3 col-sm-12 col-lg-3">
@@ -247,14 +247,18 @@
                                 </div>
                                 <hr>
 
-                                <div class="col-sm-12 col-md-12 col-lg-12">
+                                <div class="col-sm-12 col-md-4 col-lg-4"></div>
+                                <div class="col-sm-12 col-md-4 col-lg-4">
                                     <a href="#"><button type="submit" class="btn-submit"><i class="bi bi-node-plus"></i>
                                             Add Lead Data</button></a>
                                 </div>
+                                <div class="col-sm-12 col-md-4 col-lg-4"></div>
 
                             </form>
                         </div>
                     </div>
+
+                    <!-- Modify pill -->
                     <div class="tab-pane fade" id="v-pills-profile" role="tabpanel"
                         aria-labelledby="v-pills-profile-tab">
 
@@ -422,7 +426,7 @@
                             </table>
                         </div>
                     </div>
-
+                    <!-- Modify pill complete -->
 
 
                     <!-- verify pill -->
@@ -430,11 +434,8 @@
                     <div class="tab-pane fade " id="v-pills-verify" role="tabpanel"
                         aria-labelledby="v-pills-verify-tab">
 
-
-
                         <div>
                             <h2> <i class="fa fa-check" aria-hidden="true"></i> <u>Verify Leads</u> </h2>
-
                             <form action="" class="row  mt-5">
                                 <div class="dropdown col-md-2 col-lg-2 col-sm-12">
                                     <select class="form-select" aria-label="set-state">
@@ -596,8 +597,6 @@
                             </table>
                         </div>
 
-
-
                     </div>
 
                     <!-- verify pill over -->
@@ -617,64 +616,7 @@
         </div>
     </section>
 
-    <!-- Modal-1: Viewing Lead Data -->
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Lead Details</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <div class="row">
-                        <div class="col-lg-6 col-sm-6 col-md-6">
-                            <b>Lead Name</b>
-                        </div>
-                        <div class="col-lg-6 col-sm-6 col-md-6">
-                            Insert lead name here
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-6 col-sm-6 col-md-6">
-                            <b>Contact Number</b>
-                        </div>
-                        <div class="col-lg-6 col-sm-6 col-md-6">
-                            Insert contact no. here
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-6 col-sm-6 col-md-6">
-                            <b>Email</b>
-                        </div>
-                        <div class="col-lg-6 col-sm-6 col-md-6">
-                            Insert email here
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-6 col-sm-6 col-md-6">
-                            <b>Address</b>
-                        </div>
-                        <div class="col-lg-6 col-sm-6 col-md-6">
-                            Insert address here
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-6 col-sm-6 col-md-6">
-                            <b>Google Map link</b>
-                        </div>
-                        <div class="col-lg-6 col-sm-6 col-md-6">
-                            Insert GMaps URL here
-                        </div>
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- Modal-2:Updating Lead Data -->
+    <!-- Modal-1:Updating Lead Data -->
     <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
         aria-labelledby="staticBackdropLabel" aria-hidden="true">
         <div class="modal-dialog modal-lg">
@@ -749,23 +691,23 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-12 col-md-12 row">
-                                    <b class="col-md-3 col-sm-12 col-lg-3">Type of Lead: </b>
+                                    <b class="col-md-2 col-sm-12 col-lg-2">Type of Lead: </b>
                                     <div class="col-md-3 col-sm-12 col-lg-3">
-                                        <input type="radio" class="btn-check" name="options-outlined-2"
-                                            id="success-outlined-2" autocomplete="off" checked>
-                                        <label class="btn btn-outline-success" for="success-outlined-2">Public
+                                        <input type="radio" class="btn-check" name="options-outlined"
+                                            id="secondary-outlined" autocomplete="off" checked>
+                                        <label class="btn btn-outline-secondary" for="secondary-outlined">Public
                                             (Government)</label>
                                     </div>
                                     <div class="col-md-3 col-sm-12 col-lg-3">
-                                        <input type="radio" class="btn-check" name="options-outlined-2"
-                                            id="info-outlined-2" autocomplete="off">
-                                        <label class="btn btn-outline-info" for="info-outlined-2">Private (For
+                                        <input type="radio" class="btn-check" name="options-outlined" id="info-outlined"
+                                            autocomplete="off">
+                                        <label class="btn btn-outline-info" for="info-outlined">Private (For
                                             Profit)</label>
                                     </div>
                                     <div class="col-md-3 col-sm-12 col-lg-3">
-                                        <input type="radio" class="btn-check" name="options-outlined-2"
-                                            id="dark-outlined-2" autocomplete="off">
-                                        <label class="btn btn-outline-dark" for="dark-outlined-2">NGO / Others
+                                        <input type="radio" class="btn-check" name="options-outlined" id="dark-outlined"
+                                            autocomplete="off">
+                                        <label class="btn btn-outline-dark" for="dark-outlined">NGO / Others
                                             (Non-Profit)</label>
                                     </div>
                                 </div>
@@ -775,28 +717,28 @@
                                 <!-- Adding resources -->
                                 <h5>Category-1 Section</h5>
                                 <hr>
-                                <div class="col-md-6 col-lg-3 col-sm-12">
+                                <div class="col-md-6 col-lg-4 col-sm-12">
                                     <div class="input-group mb-3">
                                         <span class="input-group-text" id="basic-addon1">Sub-category-1 Count</span>
                                         <input type="number" min="0" class="form-control" placeholder="#"
                                             aria-label="Username" aria-describedby="basic-addon1">
                                     </div>
                                 </div>
-                                <div class="col-md-6 col-lg-3 col-sm-12">
+                                <div class="col-md-6 col-lg-4 col-sm-12">
                                     <div class="input-group mb-3">
                                         <span class="input-group-text" id="basic-addon1">Sub-category-2 Count</span>
                                         <input type="number" min="0" class="form-control" placeholder="#"
                                             aria-label="Username" aria-describedby="basic-addon1">
                                     </div>
                                 </div>
-                                <div class="col-md-6 col-lg-3 col-sm-12">
+                                <div class="col-md-6 col-lg-4 col-sm-12">
                                     <div class="input-group mb-3">
                                         <span class="input-group-text" id="basic-addon1">Sub-category-3 Count</span>
                                         <input type="number" min="0" class="form-control" placeholder="#"
                                             aria-label="Username" aria-describedby="basic-addon1">
                                     </div>
                                 </div>
-                                <div class="col-md-6 col-lg-3 col-sm-12">
+                                <div class="col-md-6 col-lg-4 col-sm-12">
                                     <div class="input-group mb-3">
                                         <span class="input-group-text" id="basic-addon1">Sub-category-4 Count</span>
                                         <input type="number" min="0" class="form-control" placeholder="#"
@@ -807,27 +749,28 @@
 
                                 <h5>Category-2 Section</h5>
                                 <hr>
-                                <div class="col-md-6 col-lg-3 col-sm-12">
+                                <div class="col-md-6 col-lg-4 col-sm-12">
                                     <div class="input-group mb-3">
                                         <span class="input-group-text" id="basic-addon1">Sub-category-1 Count</span>
                                         <input type="number" min="0" class="form-control" placeholder="#"
                                             aria-label="Username" aria-describedby="basic-addon1">
                                     </div>
                                 </div>
-                                <div class="col-md-6 col-lg-3 col-sm-12">
+                                <div class="col-md-6 col-lg-4 col-sm-12">
                                     <div class="input-group mb-3">
                                         <span class="input-group-text" id="basic-addon1">Sub-category-2 Count</span>
                                         <input type="number" min="0" class="form-control" placeholder="#"
                                             aria-label="Username" aria-describedby="basic-addon1">
                                     </div>
                                 </div>
-                                <div class="col-md-6 col-lg-3 col-sm-12">
+                                <div class="col-md-6 col-lg-4 col-sm-12">
                                     <div class="input-group mb-3">
                                         <span class="input-group-text" id="basic-addon1">Sub-category-3 Count</span>
                                         <input type="number" min="0" class="form-control" placeholder="#"
                                             aria-label="Username" aria-describedby="basic-addon1">
                                     </div>
                                 </div>
+                                <div class="col-sm-12 col-md-4 col-lg-4"></div>
                                 <hr>
                                 <p> <em>Updating data here will update data everywhere.</em> </p>
                         </div>
@@ -841,9 +784,7 @@
         </div>
     </div>
 
-
-
-    <!-- Modal-3:Approve Lead Data -->
+    <!-- Modal-2:Approve Lead Data -->
     <div class="modal fade" id="approveModel" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
         aria-labelledby="staticBackdropLabel" aria-hidden="true">
         <div class="modal-dialog modal-lg">
@@ -926,7 +867,7 @@
                         <div class="col-md-12 col-lg-12 col-sm-12">
                             <div class="input-group ">
                                 <p class="font-weight-bold p-1">Type of Lead:</p>
-                                <span class="rounded p-1 text-success">Public (Government)</span>
+                                <span class="rounded p-1 text-secondary">Public (Government)</span>
                                 <span class="rounded p-1 text-info">Private (For Profit)</span>
                                 <span class="rounded p-1 text-dark">NGO / Others (Non-Profit)</span>
 
