--- a/frontendfiles/team-add-modify.html
+++ b/frontendfiles/team-add-modify.html
@@ -717,30 +717,30 @@
                                 <!-- Adding resources -->
                                 <h5>Category-1 Section</h5>
                                 <hr>
-                                <div class="col-md-6 col-lg-4 col-sm-12">
+                                <div class="col-md-6 col-lg-4 col-sm-12 ">
                                     <div class="input-group mb-3">
-                                        <span class="input-group-text" id="basic-addon1">Sub-category-1 Count</span>
+                                        <span class="input-group-text col-lg-7 col-md-7 col-sm-12" id="basic-addon1">Sub-category-1<br> Count</span>
                                         <input type="number" min="0" class="form-control" placeholder="#"
                                             aria-label="Username" aria-describedby="basic-addon1">
                                     </div>
                                 </div>
                                 <div class="col-md-6 col-lg-4 col-sm-12">
                                     <div class="input-group mb-3">
-                                        <span class="input-group-text" id="basic-addon1">Sub-category-2 Count</span>
+                                        <span class="input-group-text col-lg-7 col-md-7 col-sm-12" id="basic-addon1">Sub-category-2<br> Count</span>
                                         <input type="number" min="0" class="form-control" placeholder="#"
                                             aria-label="Username" aria-describedby="basic-addon1">
                                     </div>
                                 </div>
                                 <div class="col-md-6 col-lg-4 col-sm-12">
                                     <div class="input-group mb-3">
-                                        <span class="input-group-text" id="basic-addon1">Sub-category-3 Count</span>
+                                        <span class="input-group-text col-lg-7 col-md-7 col-sm-12" id="basic-addon1">Sub-category-3<br>Count</span>
                                         <input type="number" min="0" class="form-control" placeholder="#"
                                             aria-label="Username" aria-describedby="basic-addon1">
                                     </div>
                                 </div>
                                 <div class="col-md-6 col-lg-4 col-sm-12">
                                     <div class="input-group mb-3">
-                                        <span class="input-group-text" id="basic-addon1">Sub-category-4 Count</span>
+                                        <span class="input-group-text col-lg-7 col-md-7 col-sm-12" id="basic-addon1">Sub-category-4<br> Count</span>
                                         <input type="number" min="0" class="form-control" placeholder="#"
                                             aria-label="Username" aria-describedby="basic-addon1">
                                     </div>
@@ -751,21 +751,21 @@
                                 <hr>
                                 <div class="col-md-6 col-lg-4 col-sm-12">
                                     <div class="input-group mb-3">
-                                        <span class="input-group-text" id="basic-addon1">Sub-category-1 Count</span>
+                                        <span class="input-group-text col-lg-7 col-md-7 col-sm-12" id="basic-addon1">Sub-category-1<br> Count</span>
                                         <input type="number" min="0" class="form-control" placeholder="#"
                                             aria-label="Username" aria-describedby="basic-addon1">
                                     </div>
                                 </div>
                                 <div class="col-md-6 col-lg-4 col-sm-12">
                                     <div class="input-group mb-3">
-                                        <span class="input-group-text" id="basic-addon1">Sub-category-2 Count</span>
+                                        <span class="input-group-text col-lg-7 col-md-7 col-sm-12" id="basic-addon1">Sub-category-2<br> Count</span>
                                         <input type="number" min="0" class="form-control" placeholder="#"
                                             aria-label="Username" aria-describedby="basic-addon1">
                                     </div>
                                 </div>
                                 <div class="col-md-6 col-lg-4 col-sm-12">
                                     <div class="input-group mb-3">
-                                        <span class="input-group-text" id="basic-addon1">Sub-category-3 Count</span>
+                                        <span class="input-group-text col-lg-7 col-md-7 col-sm-12" id="basic-addon1">Sub-category-3<br>Count</span>
                                         <input type="number" min="0" class="form-control" placeholder="#"
                                             aria-label="Username" aria-describedby="basic-addon1">
                                     </div>
